# Kafka-Image-Processing-Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test.py  test_api_call.py
.github/workflows/: ci.yml
api/: app.py  schemas.py
docker/: Dockerfile  docker-compose.yml
docs/: scalability_design.md
pipeline/: base_service.py  bg_removal_service.py  bg_replace_service.py  processing_pipeline.py  upscale_service.py
tests/: test_pipeline.py
tests/integration/: test_concurrency.py
tests/unit/: test_api.py  test_pipeline.py
utils/: constants.py  fal_client_utils.py
